PMA-1296 | main functionality